2_vertical_scaling/terraform/stateless/alb.tf
resource "aws_lb" "default" {
  name               = "${var.alb_name}"
  internal           = false
  load_balancer_type = "application"
  subnets            = module.vpc.public_subnets
  security_groups    = [aws_security_group.default.id]
  tags = {
    "env"   = "dev"
    "Owner" = "gilberto"
  }
}

resource "aws_lb_target_group" "default" {
  name     = "${var.tg_name}"
  port     = 80
  protocol = "HTTP"
  vpc_id   = module.vpc.vpc_id
}

resource "aws_lb_target_group_attachment" "default" {
  target_group_arn = aws_lb_target_group.default.arn
  target_id        = aws_instance.ec2_server.id
  port             = 80
}

resource "aws_lb_listener" "default" {
  load_balancer_arn = aws_lb.default.arn
  port              = 443
  protocol          = "HTTPS"
  ssl_policy        = "ELBSecurityPolicy-2016-08"
  certificate_arn   = aws_acm_certificate_validation.acm_validation.certificate_arn

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.default.arn
  }
}
